--- a/src/components/directory/style.scss
+++ b/src/components/directory/style.scss
@@ -24,64 +24,69 @@
     }
   }
 
-  .card_header {
-    position: relative;
-  }
-
-  .card-body {
-    padding: .75rem;
-  }
-
-  .card_Title {
-    width: 100%;
-    opacity: 0.8;
-    position: absolute;
-    bottom: 0px;
-    background: #f1fbff;
-    padding: 0.625rem;
-
-    .character_Name {
-      color: #044161;
-      font-size: 1.2rem;
-      font-weight: 400;
-      font-stretch: expanded;
-      margin: 0px;
+  .card {
+    border: 0 none;
+    .card_header {
+      position: relative;
     }
 
-    .character_Description {
-      color: #4e4e4e;
-      font-size: 0.875rem;
-      margin: 0px;
+    .card-body {
+      padding: .75rem 0;
     }
-  }
 
-  .card-info {
-    padding: 0;
+    .card_Title {
+      width: 100%;
+      opacity: 0.8;
+      position: absolute;
+      bottom: 0px;
+      background: #f1fbff;
+      padding: 0.625rem;
 
-    li {
-      display: flex;
-      -webkit-box-pack: justify;
-      justify-content: space-between;
-      -webkit-box-align: center;
-      align-items: center;
-      flex-wrap: nowrap;
-      padding: 0.75rem 0px 0.375rem;
-      border-bottom: 1px solid #d0d0d0;
-
-      span {
-        font-size: 0.7rem;
+      .character_Name {
+        color: #044161;
+        font-size: 1.2rem;
         font-weight: 400;
-        color: rgb(158, 158, 158);
+        font-stretch: expanded;
+        margin: 0px;
       }
 
-      p {
-        width: 100%;
-        font-size: 0.9rem;
-        font-weight: 200;
-        text-align: right;
-        padding: 0px;
-        margin: 0px;
+      .character_Description {
         color: #4e4e4e;
+        font-size: 0.875rem;
+        margin: 0px;
+      }
+    }
+    .card-img, .card-img-top{
+      border-radius: 0;
+    }
+    .card-info {
+      padding: 0;
+      margin-bottom: 0;
+      li {
+        display: flex;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+        -webkit-box-align: center;
+        align-items: center;
+        flex-wrap: nowrap;
+        padding: 0.75rem 0px 0.375rem;
+        border-bottom: 1px solid #d0d0d0;
+
+        span {
+          font-size: 0.7rem;
+          font-weight: 400;
+          color: rgb(158, 158, 158);
+        }
+
+        p {
+          width: 100%;
+          font-size: 0.9rem;
+          font-weight: 200;
+          text-align: right;
+          padding: 0px;
+          margin: 0px;
+          color: #4e4e4e;
+        }
       }
     }
   }
